[package]
name = "zoomtiler"
version = "1.0.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
repository = "https://github.com/mpizenberg/zoomtiler"
edition = "2018"
description = "Generate zoomable tiled images"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.44" # for error handling
seahorse = "1.1.2" # command line argument parser
image = "0.23.14"
imagesize = "0.9.0"
